final version is ready all tests pass